WEB-5002 Quick style fix for supplier overlapping license in taxon overview media.

--- a/app/assets/stylesheets/accessibility.sass
+++ b/app/assets/stylesheets/accessibility.sass
@@ -859,6 +859,9 @@ p.flag, span.flag
             top: 0
             left: 0
             margin: 0
+          span.license
+            + .copy
+              padding-top: 1.2em
           img
             margin-top: -1px
           &.license_string
