--- a/app/assets/stylesheets/rtl/accessibility.sass
+++ b/app/assets/stylesheets/rtl/accessibility.sass
@@ -869,6 +869,9 @@ p.flag, span.flag
             top: 0
             right: 0
             margin: 0
+          span.license
+            + .copy
+              padding-top: 1.2em
           img
             margin-top: -1px
           &.license_string
